@@ -1,3 +1,7 @@
+2006-09-16  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab.c: plug a leak.
+
 2006-09-09  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* src/baobab-prefs.c: (create_tree_props):
